// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fileOperations walks generates mock files for all existing files in the dir 1`] = `
"import React from 'react'
"
`;

exports[`fileOperations walks generates mock files for all existing files in the dir 2`] = `
"import React from 'react'
export const SomeComponent = () => (React.createElement(SomeComponent));"
`;
